--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.2.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-lifecycle-components": "^1.1.2",
     "react-loader-spinner": "^5.3.4",
     "react-router-dom": "^6.4.5",
     "react-scripts": "5.0.1",
